syntax = "proto3";

option go_package = ".;pb";

package echo;

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc StreamingEcho(stream EchoRequest) returns (stream EchoResponse);
}
